# CrashCpp

./: .gitignore  CMakeLists.txt  README.md  crashcpp-config.cmake
deploy/: CMakeLists.txt
docs/api-docs/: CMakeLists.txt  doxyfile.in
docs/manual/: CMakeLists.txt  crashcpp.tex
source/: CMakeLists.txt
source/crashcpp/: CMakeLists.txt
source/crashcpp/include/crashcpp/: crashcpp.h  logreport.h  mailreport.h  postreport.h  report.h
source/crashcpp/source/: crashcpp.cpp  logreport.cpp  mailreport.cpp  postreport.cpp  report.cpp
source/examples/: CMakeLists.txt
source/examples/crashcppgui/: CMakeLists.txt  main.cpp
source/examples/crashcpplog/: CMakeLists.txt  main.cpp
source/examples/crashcppmail/: CMakeLists.txt  main.cpp
source/examples/crashcpppost/: CMakeLists.txt  main.cpp
